Bug: 6854 (again) Description: - move Default songinfo.html to EN, so that EN, Fishbone, and Classic can all use the same template.              - fix overflow in EN for album info using IE              - fix background colour in Class songinfo that would sometimes obscure the details in IE              - fix alignment of comment block in fishbone skin for FF2/Opera
Bug: 6854
git-svn-id: file:///home/awy/mirror/slim/branches/7.0/server@17044 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Fishbone/skin.css
+++ b/HTML/Fishbone/skin.css
@@ -381,17 +381,6 @@ div#pagetitle {
 	display: table-row;
 }
 
-.songInfoTitle, .songInfoText {
-	display: table-cell;
-	width: auto;
-}
-
-.songInfoTitle {
-	width: 150px;
-	text-align: right;
-	padding-right: 12px;
-}
-
 .thumbnail {
 	padding: 0px;
 	text-align: center;
